# QuasarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-shaders.bat  build-shaders.sh  build_output.txt  debug_layout.txt
.github/instructions/: main.instructions.md
Assets/Shaders/: Builtin.World.frag.glsl  Builtin.World.vert.glsl
Assets/shaders/: gradient.comp  gradient_color.comp  sky.comp
Editor/: CMakeLists.txt
Editor/src/: ed_camera.c  ed_camera.h  ed_commands.c  ed_commands.h  ed_gizmo.c  ed_gizmo.h  ed_keybinds.c  ed_keybinds.h  ed_pick.c  ed_pick.h  ed_style.c  ed_style.h  ed_thumbnail.c  ed_thumbnail.h  ed_undo.c  ed_undo.h  editor.c  editor.h  main.c
Editor/src/Core/: Editor.cpp  Editor.h
Editor/src/ui/: ed_file_browser.c  ed_file_browser.h  ed_hierarchy.c  ed_hierarchy.h  ed_icon_btn.c  ed_icon_btn.h  ed_icons.h  ed_import_dialog.c  ed_import_dialog.h  ed_inspector.c  ed_inspector.h  ed_layout.c  ed_layout.h  ed_menu_bar.c  ed_menu_bar.h  ed_node_graph.c  ed_node_graph.h  ed_plugin_manager.c  ed_plugin_manager.h  ed_project_launcher.c  ed_project_launcher.h  ed_project_settings.c  ed_project_settings.h  ed_renderer_settings.c  ed_renderer_settings.h  ed_settings.c  ed_settings.h  ed_status_bar.c  ed_status_bar.h  ed_system_panel.c  ed_system_panel.h  ed_toolbar.c  ed_toolbar.h
Quasar/: CMakeLists.txt
Quasar/Include/: EntryPoint.h  Quasar.h
Quasar/include/: qs_api.h  qs_asset.h  qs_asset_pack.h  qs_dylib.h  qs_event.h  qs_ext.h  qs_forward.h  qs_gpu.h  qs_input.h  qs_job.h  qs_light.h  qs_log.h  qs_material.h  qs_math.h  qs_memory.h  qs_mesh.h  qs_plugin.h  qs_primitive.h  qs_primitives.h  qs_project.h  qs_reflect.h  qs_render_graph.h  qs_renderer.h  qs_scene.h  qs_system.h  qs_texture.h  quasar.h
Quasar/include/quasar/: quasar.h
Quasar/src/: AppTypes.inl  Defines.h  defines.h  engine.c  qs_pch.h  qspch.h
Quasar/src/Containers/: DeletionQueue.h  DynamicArray.h  File.cpp  File.h  FrameDynamicArray.h  FreeList.h  Hashmap.h  Json.cpp  Json.h  RingQueue.h  String.h  XML.cpp  XML.h  XMLPaser.h
Quasar/src/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Event.cpp  Event.h  Input.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Platform.cpp  Platform.h  System.h  SystemManager.cpp  SystemManager.h  Window.cpp  Window.h  input.cpp
Quasar/src/Gui/: GuiFonts.h  GuiStyles.h  GuiWindow.cpp  GuiWindow.h
Quasar/src/Gui/Windows/: Dockspace.cpp  Dockspace.h  ImageGUI.cpp  ImageGUI.h  Scenespace.cpp  Scenespace.h
Quasar/src/Math/: Mat4.cpp  Mat4.h  Math.cpp  Math.h  MathTypes.h  MathUtils.h  Quat.cpp  Quat.h  Random.cpp  Random.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
Quasar/src/Memory/: FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.h  Memory.cpp  Memory.h
Quasar/src/Platform/: File.cpp  File.h  Mutex.h  Mutext_mac.cpp  Mutext_windows.cpp  Platform.h  Thread.h  Thread_mac.cpp  Thread_windows.cpp
Quasar/src/Renderer/: RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererTypes.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInit.h  VulkanInitInfo.cpp  VulkanInitInfo.h  VulkanLoader.cpp  VulkanLoader.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h
Quasar/src/Renderer/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCheckReslt.h  VulkanCommandbuffer.cpp  VulkanCommandbuffer.h  VulkanCommmandBuffer.cpp  VulkanCommmandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanImgui.cpp  VulkanImgui.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderpass.cpp  VulkanRenderpass.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderUtils.cpp  VulkanShaderUtils.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h  VulkanUtils.cpp  VulkanUtils.h
Quasar/src/Renderer/VulkanRenderer/: VulkanBackend.cpp  VulkanBackend.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInfo.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h
Quasar/src/Resources/: Scene.cpp  Scene.h  Shader.cpp  Shader.h
Quasar/src/Resources/Loader/: Loader.h  ShaderLoader.h
Quasar/src/Systems/: GuiSystem.cpp  GuiSystem.h  JobSystem.cpp  JobSystem.h
Quasar/src/core/: engine.c  qs_asset.c  qs_asset_pack.c  qs_dylib.c  qs_event.c  qs_ext.c  qs_gpu.c  qs_job.c  qs_memory.c  qs_plugin_manager.c  qs_project.c  qs_reflect.c  qs_scene.c  qs_system.c
Quasar/src/renderer/: pbr_forward.c  pbr_internal.h  pbr_renderer.c  qs_forward.c  qs_light.c  qs_material.c  qs_mesh.c  qs_primitives.c  qs_render_graph.c  qs_renderer.c  qs_renderer_shared.h  qs_texture.c  rg_pbr_node.c  rg_shadow_node.c  rg_tonemap_node.c
Quasar/src/systems/: qs_core_systems.c  qs_event_system.c  qs_gpu_resources.c  qs_input_system.c  qs_job_system.c  qs_light_system.c  qs_log_system.c  qs_material_system.c  qs_mesh_system.c  qs_texture_system.c
Runtime/: CMakeLists.txt
Runtime/src/: main.c
Sandbox/: Sandbox.quasar
Sandbox/assets/ABeautifulGame/: ABeautifulGame.qproto
Sandbox/assets/scenes/: default.qscene
Sandbox/assets/sponza/: Sponza.qentity  Sponza.qproto
Sandbox/scenes/: default.qscene
plugins/BloomNode/: CMakeLists.txt
plugins/BloomNode/src/: bloom_node.c  plugin_main.c
plugins/BuiltinRendererPBR/: CMakeLists.txt
plugins/BuiltinRendererPBR/src/: pbr_forward.c  pbr_internal.h  pbr_renderer.c  plugin_main.c  vk_common.h  vk_forward.c  vk_light.c  vk_material.c  vk_mesh.c  vk_renderer.c  vk_renderer_internal.h  vk_texture.c
plugins/GltfImporter/: CMakeLists.txt
plugins/GltfImporter/src/: gltf_loader.c  gltf_loader.h  plugin_main.c  vendor_impl.c
plugins/SkyNode/: CMakeLists.txt
plugins/SkyNode/src/: plugin_main.c  sky_node.c
plugins/VignetteNode/: CMakeLists.txt
plugins/VignetteNode/src/: plugin_main.c  vignette_node.c
tools/: refactor_allocs.py
(+22 files in other folders)
